--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 .form {
   width: 90%;
   max-width: 500px;
-  background: linear-gradient(135deg, #00feba, #5b548a);
+  background: linear-gradient(135deg, #d1429a, #9a90db);
   color: #fff;
   margin: 100px auto 0;
   border-radius: 20px;
@@ -62,13 +62,18 @@ body {
 
 .weather h1 {
   font-size: 80px;
-  font-weight: 500px;
+  font-weight: 400px;
 }
 
 .weather h2 {
   font-size: 45px;
-  font-weight: 400px;
+  font-weight: 350px;
   margin-top: -10px;
+}
+
+.weather h3 {
+  font-size: 16px;
+  font-weight: 500px;
 }
 
 .details {
@@ -96,10 +101,10 @@ body {
 }
 
 .footer {
-  padding: 20px;
+  padding: 50px;
   position: fixed;
   bottom: 0;
   left: 407px;
-  font-size: 15px;
-  font-family: sans-serif;
+  font-size: 13px;
+  font-family: cursive;
 }
