--- a/src/style.css
+++ b/src/style.css
@@ -100,11 +100,10 @@ body {
   margin: -6px;
 }
 
-.footer {
-  padding: 50px;
-  position: fixed;
-  bottom: 0;
-  left: 407px;
+footer {
+  text-align: center;
+  padding-top: 18px;
+  color: rgba(18, 18, 19, 0.4);
   font-size: 13px;
-  font-family: cursive;
+  font-family: sans-serif;
 }
