--- a/src/style.css
+++ b/src/style.css
@@ -102,8 +102,9 @@ body {
 
 footer {
   text-align: center;
-  padding-top: 18px;
-  color: rgba(18, 18, 19, 0.4);
-  font-size: 13px;
+  padding-top: 30px;
+  color: rgba(10, 10, 12, 0.4);
+  font-size: 12px;
   font-family: sans-serif;
+  font-weight: bold;
 }
